Add timezone support and Jitsi integration to bookings
This update adds full timezone detection and handling for appointments, ensuring all times are displayed and stored in the user's local timezone. It also introduces automatic Jitsi Meet video meeting generation for each booking, includes the meeting link in emails and calendar events, and removes local database storage in favor of CalDAV-only appointment management. The frontend and backend have been updated for improved slot generation, conflict checking, and ICS file generation with timezone support. Minor UI and translation improvements are also included.

--- a/languages/easy-calendar-appointment-booking-de_DE.po
+++ b/languages/easy-calendar-appointment-booking-de_DE.po
@@ -299,15 +299,15 @@ msgstr "Plugin-Informationen"
 msgid "Version:"
 msgstr "Version:"
 
-msgid "Server Time:"
-msgstr "Serverzeit:"
+msgid "Device Time:"
+msgstr "Gerätezeit:"
 
 msgid "System Time (Plugin):"
 msgstr "Systemzeit (Plugin):"
 
 # Frontend Booking Form
 msgid "Book Your Appointment"
-msgstr "Buchen Sie Ihren Termin"
+msgstr "Termin buchen"
 
 msgid "Service"
 msgstr "Service"
@@ -507,3 +507,6 @@ msgstr "Storniert"
 
 msgid "Completed"
 msgstr "Abgeschlossen"
+
+msgid "Appointment details:"
+msgstr "Termindetails:"
